migrations, seeders and less fixed to known extend

--- a/views/layout.html.ejs
+++ b/views/layout.html.ejs
@@ -21,7 +21,7 @@
         <%-body%>
         <% if(self.req.user) {%>
         <script>
-              let currentUserId = <%-self.req.user.id%>;
+              let currentUserId = <% self.req.user.id %>
         </script>
         <% } %>
         <% for (let index = 0; index<self.jsFiles.length; index++){%>
