--- a/src/less/layout.less
+++ b/src/less/layout.less
@@ -1,4 +1,5 @@
 
+@import './shared/reset.less';
 @import './shared/defines.less';
 @import './shared/elements.less';
 @import './shared/animations.less';
@@ -8,4 +9,6 @@ body {
     background-position: center center;
     background-attachment: fixed;
     background-size: cover;
+
+    font-family: Arial, Helvetica, sans-serif;
 }
