--- a/src/less/shared/defines.less
+++ b/src/less/shared/defines.less
@@ -1,5 +1,7 @@
 @imagePath : '/assets/images';
 
+
+//color defines
 @color-default-bg: grey;
 @color-input-bg: white;
 
@@ -7,3 +9,17 @@
 @color-warning: yellow;
 @color-error: red;
 @color-fine: green;
+
+@color-menu-item: #6A6A6A;
+@color-chat-topbar-bg: #bdc3c7;
+@color-chat-topbar-text: #000000;
+@color-chat-submit-bg: #bdc3c7;
+@color-chat-submit-text: #000000;
+
+@menu-width: 44px;
+@chat-width: 240px;
+@chat-topbar-height: @menu-width;
+@chat-input-height: 80px;
+@kanban-col-width: 40px;
+@kanban-title-height: @menu-width;
+@kanban-add-height: 37px;
