--- a/views/layout.html.ejs
+++ b/views/layout.html.ejs
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title><%=title%></title>
-        <meta name="viewport" content="width-device-width, initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <% for (let index = 0; index < self.cssFiles.length; index++) { %>
         <link rel= "stylesheet" type="text/css" href="/assets/css/<%-self.cssFiles[index] %>.css">
         <% } %>
