--- a/views/pages/signin.html.ejs
+++ b/views/pages/signin.html.ejs
@@ -1,7 +1,7 @@
 <div class="signup-wrapper">
     <form id="signin-form" action="<%-self.urlFor('api/users','signin',null,'POST')%>" method="POST">
         <div class="input-wrapper">
-            <input class="top" id="email" name="email" value=""  type="email" placeholder="E-Mail Address">
+            <input class="top" id="email" name="email" value="" type="email" placeholder="E-Mail Address">
         </div>
         <div class="input-wrapper">
             <input class="bottom" id="password" name="password" type="password" value="" placeholder="Your Password">
@@ -9,3 +9,31 @@
         <button onclick="submitPressed(this); return false;"></button>
     </form>
 </div>
+
+<script>
+    function submitPressed(elm)
+    {
+        var form = document.getElementById('signin-form');
+        var xhr = new XMLHttpRequest();
+
+        xhr.onload = function() {
+            if(xhr.status >= 200 && xhr.status < 300)
+            {
+                console.log('success');
+            }
+            else
+            {
+                console.log('request failed');
+            }
+        }
+        
+        xhr.open(form.getAttribute('method') || 'POST', form.getAttribute('action'));
+        xhr.setRequestHeader('Content-Type', 'application/json');
+        xhr.send(JSON.stringify({
+            user: {
+                email: document.getElementById('email').value,
+                password: document.getElementById('password').value
+            }
+        }));
+    }
+</script>
